# Tiny2DLuaEngine

./: .gitignore  CMakeLists.txt  README.md
assets/scripts/: Level1.lua
libs/imgui/: imgui.h  imgui_demo.cpp
src/: Main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidbodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  KeyEvent.h
src/Executable/: executable.cpp
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderGUISystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
